--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.+'
     // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    // Firebase
+    compile "com.google.firebase:firebase-auth:9.0.2"
 }
+
+apply plugin: 'com.google.gms.google-services'
