--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,10 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.+'
     // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    // Firebase
-    compile "com.google.firebase:firebase-auth:9.0.2"
+    // Firebase Authentication
+    compile 'com.google.firebase:firebase-auth:9.2.1'
+    // Firebase Database
+    compile 'com.google.firebase:firebase-database:9.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
